# thesis-figures

./: .gitignore  CMakeLists.txt
chapter1/: export.sh
chapter1/convex/: ch1-convex.sh  local_minimum.py  single_ball.py
chapter1/denoising/: ch1-denoising.sh
chapter1/segmentation/: ch1-segmentation.sh  geodesic_and_cv_seg.py
chapter3/: export.sh
chapter3/tv-curvature-coala/: ch3-tv-curvature-coala.sh
chapter3/tv-curvature-stars/: ch3-tv-curvature-stars.sh
chapter4/: CMakeLists.txt  export.sh
chapter4/perimeter/: CMakeLists.txt  ch4-dss-perimeter-estimator.cpp  ch4-dss-perimeter-estimator.sh
chapter5/: CMakeLists.txt  export.sh
chapter5/cellular-grid/: CMakeLists.txt  ch5-cellular-grid.cpp  ch5-cellular-grid.sh
chapter5/gcurves/: CMakeLists.txt  ch5-gcurves.cpp  ch5-gcurves.sh
chapter5/gcurves/src/: glued-curve.cpp
chapter5/m-ring/: CMakeLists.txt  ch5-m-ring.cpp  ch5-m-ring.sh
chapter5/mdca-sensitivity/: CMakeLists.txt  ch5-mdca-sensitivity.cpp  ch5-mdca-sensitivity.sh
chapter5/mdca-sensitivity/input/: 0017-a.pgm
chapter6/: CMakeLists.txt  export.sh
chapter6/around-normal-evolution/: CMakeLists.txt  ch6-around-normal-evolution.cpp  energy.cpp  energy.h  energy.hpp
chapter6/aux-scripts/: move-convert-eps.sh  summary-flow.sh
chapter6/balance-evolution-shape/: CMakeLists.txt  ch6-balance-evolution-shape.cpp  ch6-balance-evolution-shape.sh  create-plots.sh
chapter6/balance-evolution-shape/evolution/: create-plots.sh
chapter6/balance-evolution-shape/maxDiff/: CMakeLists.txt  ch6-balance-evolution-maxDiff.cpp  ch6-balance-evolution-maxDiff.sh
chapter6/balance-evolution-square/: CMakeLists.txt  ch6-balance-evolution-square.cpp  ch6-balance-evolution-square.sh  plot-graph.sh
chapter6/complement-reasoning/: CMakeLists.txt  ch6-complement-reasoning.cpp  ch6-complement-reasoning.sh
chapter6/flow/: ch6-flow.sh
chapter6/level-effect/: ch6-level-effect.sh  get-path.sh  plots.sh
chapter6/plot-scripts/: plot-graph.sh
chapter6/radius-effect/: ch6-radius-effect.sh  get-path.sh  plots.sh
chapter6/resolution-shrinking/: ch6-resolution-shrinking.sh
chapter6/segmentation/: ch6-segmentation.sh  get-path.sh
chapter6/segmentation/instance-generator/: config.py  generator.py
chapter6/shape-evolution/: ch6-shape-evolution.sh  flow.sh  level-minus-2.sh
chapter6/shape-potential-evolution/: CMakeLists.txt  ch6-shape-potential-evolution.cpp  create-plots.sh
chapter6/shape-potential-evolution/include/: InputData.h  MockDistribution.h
chapter6/topology-change/: CMakeLists.txt  ch6-topology-change.sh
chapter6/unlabeled-ratio/: CMakeLists.txt  ch6-unlabeled-ratio.sh
chapter6/weighting-ball/: weigthing-ball.py
chapter7/: CMakeLists.txt  export.sh
chapter7/around-normal-evolution/: energy.h
chapter7/balance-coefficient/: balance-coefficient.sage
chapter7/balance-evolution-shape/: CMakeLists.txt
chapter7/balance-evolution-shape/evolution/: CMakeLists.txt
chapter7/balance-evolution-shape/maxDiff/: ch7-balance-evolution-maxDiff.sh
chapter7/balance-evolution-square/: CMakeLists.txt
chapter7/distant-ball-estimator/: CMakeLists.txt
chapter7/distant-ball-estimator/around-normal-evolution/: CMakeLists.txt
chapter7/distant-ball-estimator/outer-ball-elastica-estimation/: CMakeLists.txt  ch7-outer-ball-elastica-estimation.sh
chapter7/distant-ball-estimator/outer-ball-estimator/: ch7-outer-ball-estimator.cpp  ch7-outer-ball-estimator.sh  plots.sh
chapter7/distant-ball-estimator/shape-evolution/: ch7-shape-evolution.sh  level-proportional.sh
chapter7/distant-ball-estimator/shape-potential-evolution/: CMakeLists.txt
chapter7/distant-ball-estimator/shape-potential-evolution/include/: Flow.h
chapter7/distant-ball-estimator/shape-potential-evolution/src/: Flow.cpp
chapter7/energy-comparison/: CMakeLists.txt  ch7-energy-comparison.cpp
chapter7/flipflow-distant-ball-comparison/: CMakeLists.txt
chapter7/flipflow-distant-ball-comparison/energy-comparison/: ch7-energy-comparison.sh
chapter7/flipflow-distant-ball-comparison/labeling-comparison/include/: DGCIEnergy.h
chapter7/flipflow-distant-ball-comparison/labeling-comparison/src/: utils.cpp
chapter7/flipflow-distant-ball-comparison/opt-var-ratio/: ch7-opt-var-ratio.sh
chapter7/labeling-comparison/: CMakeLists.txt  ch7-labeling-comparison.cpp  ch7-labeling-comparison.sh  plots.sh
chapter7/labeling-comparison/src/: DGCIEnergy.cpp
chapter7/level-set/: CMakeLists.txt  ch7-level-set.cpp  ch7-level-set.sh
chapter7/opt-var-ratio/: CMakeLists.txt  ch7-opt-var-ratio.cpp  ch7-opt-var-ratio.sh
chapter7/outer-ball-elastica-estimation/: ch7-outer-ball-elastica-estimation.cpp
chapter7/outer-ball-estimator/: CMakeLists.txt  ch7-outer-ball-estimator.cpp  ch7-outer-ball-estimator.sh
chapter7/potential-flow/: CMakeLists.txt  ch7-potential-flow.cpp  ch7-potential-flow.sh
chapter7/segmentation/: ch7-segmentation.sh
chapter7/shape-potential-evolution/: create-plots.sh
chapter7/unbalance-coefficient/balance-evolution-shape/evolution/: ch7-balance-evolution-shape.cpp  create-plots.sh
chapter7/unbalance-coefficient/balance-evolution-shape/maxDiff/: CMakeLists.txt  ch7-balance-evolution-maxDiff.sh
chapter7/unbalance-coefficient/balance-evolution-square/: ch7-balance-evolution-square.sh  square-unbalace-coefficient.sage
chapter8/: export.sh
chapter9/: export.sh
ext-projects/: CMakeLists.txt
nochapter/: CMakeLists.txt
nochapter/digital-grid/: CMakeLists.txt  nochapter-digital-grid.cpp  nochapter-digital-grid.sh
nochapter/digitization/: CMakeLists.txt  nochapter-digitization.cpp  nochapter-digitization.sh
nochapter/graph-cut-evolution/: CMakeLists.txt  nochapter-graph-cut-evolution.cpp  nochapter-graph-cut-evolution.sh
nochapter/myshape/: CMakeLists.txt  nochapter-myshape.cpp  nochapter-myshape.sh
nochapter/standard-line/: CMakeLists.txt  nochapter-standard-line.cpp  nochapter-standard-line.sh
plot-scripts/: graph-plot.sh
slides/: CMakeLists.txt  export.sh  utils.sh
slides/shapes/: CMakeLists.txt  slides-shapes.cpp  slides-shapes.sh
(+244 files in other folders)
