add_subdirectory(balance-evolution-square)
add_subdirectory(balance-evolution-shape)
add_subdirectory(shape-potential-evolution)
add_subdirectory(around-normal-evolution)
add_subdirectory(outer-ball-estimator)
add_subdirectory(outer-ball-elastica-estimation)
add_subdirectory(energy-comparison)
add_subdirectory(labeling-comparison)
add_subdirectory(opt-var-ratio)